# Kernel

./: .gitignore  Justfile  README.md  TEST_INDEX.md  alembic.ini  cli.py  kernel  pyproject.toml  requirements.txt  run.py  test-suite  test_send_later.py  tui-mail
alembic/: env.py
alembic/versions/: 556effb5af35_initial_schema_with_proper_types.py
core/: __init__.py  imap_client.py  storage.py
data/: .gitkeep
native/go/: go.mod  go.sum  main.go
scripts/: clean.py  just_help.py  migrate_db.py  run.py
security/: credential_manager.py  key_store.py
security/backends/: bitwarden.py  encrypted_file.py
src/: __init__.py  cli.py  native_bridge.py
src/cli/: __init__.py  cli.py  cli_parser.py  cli_utils.py  db_backup.py  db_monitor.py  lifecycle.py  router.py  shell.py  shell_builtins.py
src/cli/commands/: __init__.py  attachments.py  backup.py  base.py  command_registry.py  command_utils.py  compose.py  config.py  database.py  delete.py  delete_db.py  download.py  email.py  export.py  flag.py  list.py  move.py  operations.py  refresh.py  search.py  view.py  viewing.py
src/core/: attachments.py  bridge.py  composer_logic.py  config_manager.py  database.py  db_manager.py  email_handling.py  email_operations.py  email_schema.py  email_search.py  imap_client.py  imap_connection.py  smtp_client.py  storage_api.py  summariser.py  uid_cache.py
src/core/database/: __init__.py  base.py  config.py  connection.py  database.py  engine_manager.py  models.py  query.py  schema.py  transaction.py  utils.py
src/core/email/: README.MD  __init__.py  constants.py  parser.py
src/core/models/: attachment.py  email.py
src/core/validation/: __init__.py  datetime.py  email.py
src/daemon/: __init__.py  auth.py  cache.py  client.py  daemon.py  daemon_client.py  email_daemon.py  lifecycle.py  pools.py  renderer_daemon.py  router.py
src/features/attachments/: __init__.py  display.py  workflow.py
src/features/compose/: __init__.py  composer.py  display.py  input.py  workflow.py
src/features/maintenance/: __init__.py  display.py  workflow.py
src/features/manage/: __init__.py  display.py  operations.py  workflow.py
src/features/search/: __init__.py  display.py  query.py  workflow.py
src/features/sync/: __init__.py  display.py  workflow.py
src/features/view/: __init__.py  display.py  filters.py  workflow.py
src/quiet_mail/: __init__.py  cli.py
src/security/: credential_manager.py
src/tui/: app.py  message_actions.py  styles.tcss
src/tui_mail/: cli.py
src/ui/: composer.py  composer_ui.py  email_viewer.py  inbox_viewer.py  search_viewer.py  table_viewer.py
src/utils/: attachment_utils.py  config.json  config.py  config_manager.py  console.py  email_autodiscover.py  email_parser.py  email_utils.py  error_handling.py  errors.py  jobs.py  log_manager.py  logger.py  logging.py  model_manager.py  paths.py  scheduler.py  security.py  ui_helpers.py
tests/: QUICK_REFERENCE.md  README.md  conftest.py  run_tests.py  test_backup_service.py  test_cli.py  test_composer.py  test_config.py  test_connection.py  test_db_performance.py  test_email_repo.py  test_helpers.py  test_imap_client.py  test_native.py  test_search_service.py  test_send_later.py  test_smtp_client.py  test_storage.py  test_ui.py
ui/: __init__.py  email_viewer.py  inbox_viewer.py
(+92 files in other folders)
