[project]
name = "Kernel"
version = "0.1.0"
description = "A minimal command-line email client"
authors = [{ name = "Rob Webb", email = "rdawebb@gmail.com" }]
requires-python = "~=3.13.0"
readme = "README.md"
dependencies = [
    "aioimaplib>=2.0.1",
    "aiosmtplib>=5.0.0",
    "aiosqlite>=0.19.0",
    "apscheduler==3.11.0",
    "cryptography>=41.0.0",
    "email_validator==2.1.1",
    "fast-mail-parser>=0.2.5",
    "keyring>=24.0.0",
    "pandas>=2.0.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "pytest==8.2.0",
    "pytest-asyncio==1.2.0",
    "python-dotenv==1.1.1",
    "rich==14.1.0",
    "textual==6.2.1"
]

[project.scripts]
kernel = "src.cli.shell:main"

[dependency-groups]
dev = ["pytest>=8.0.0,<9"]

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.hatch.build.targets.wheel]
include = ["src/"]

[tool.hatch.build.targets.wheel.sources]
"src/" = "kernel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
